# ai-course

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/src/backend/: chroma.py  database.py  document_parser.py  main.py  models.py  schemas.py
backend/src/backend/alembic/: env.py
backend/src/backend/alembic/versions/: 623b80d4ff95_init.py  69f71b938e4b_chat_sessions.py  f3646a250247_add_is_indexed_to_file_model.py
backend/src/backend/routers/: auth.py  chat.py  files.py  ws.py
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/: middleware.ts  types.ts
frontend/src/app/: layout.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/chat/: layout.tsx  page.tsx
frontend/src/app/(app)/chat/[sessionId]/: page.tsx
frontend/src/app/(app)/files/: page.tsx
frontend/src/app/api/auth/login/: route.ts
frontend/src/app/api/auth/logout/: route.ts
frontend/src/app/api/auth/register/: route.ts
frontend/src/app/api/files/: route.ts
frontend/src/app/api/users/me/: route.ts
frontend/src/app/signup/: page.tsx
frontend/src/components/: app-sidebar.tsx  login-form.tsx  signup-form.tsx
frontend/src/components/chat/: function-call-message-card.tsx  message-card.tsx  normal-message-card.tsx  reasoning-message-card.tsx
frontend/src/contexts/: auth-context.tsx
frontend/src/lib/: api-utils.ts
